[tool.poetry]
name = "nft-analytics"
version = "0.1.0"
description = "NFT analytics tools"
authors = ["0xphoton <42502920+0xphoton@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.4.3"
requests = "2.28.1"
SQLAlchemy = "1.4.39"
streamlit = "1.11.1"
web3 = "5.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
